@@ -20,7 +20,7 @@ Version 2.23
   18961, 18966, 18967, 18969, 18970, 18977, 18980, 18981, 18985, 19003,
   19007, 19012, 19016, 19018, 19032, 19046, 19049, 19050, 19059, 19071,
   19074, 19076, 19077, 19078, 19079, 19085, 19086, 19088, 19094, 19095,
-  19124, 19125, 19129, 19134
+  19124, 19125, 19129, 19134, 19137
 
 * The LD_POINTER_GUARD environment variable can no longer be used to
   disable the pointer guard feature.  It is always enabled.
